# glowmint

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: code-standards.mdc  component-library.mdc  project-context.mdc  security-standards.mdc
scripts/: setup-mint.sh
src/: App.tsx  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  lib.rs  main.rs  state.rs
src-tauri/src/domain/: error.rs
src-tauri/src/domain/models/: canvas.rs  device.rs  fan_curve.rs  lcd.rs  mod.rs  profile.rs  rgb.rs  setup.rs
src-tauri/src/domain/traits/: mod.rs
src-tauri/src/drivers/: ckb_next.rs  liquidctl.rs  mod.rs  openrgb.rs  setup_probe.rs  usb.rs
src-tauri/src/drivers/corsair_lcd/: device.rs  mod.rs  protocol.rs
src-tauri/src/services/: aio_service.rs  canvas_service.rs  device_service.rs  lighting_service.rs  mod.rs  peripheral_service.rs  profile_service.rs  setup_service.rs
src-tauri/src/stores/: canvas_store.rs  config_store.rs  mod.rs  profile_store.rs
src-tauri/udev/: 99-glowmint-corsair.rules
src/components/: AppErrorBoundary.tsx  AppShell.tsx
src/components/ui/: ColorInput.tsx  EmptyState.tsx  GlassSurface.tsx  ListItemCard.tsx  MetricCard.tsx  NumberField.tsx  PageBackground.tsx  PageHeader.tsx  (+11 more)
src/hooks/: useDashboardStats.ts  useDevices.ts  usePolling.ts  useSetupGate.ts
src/lib/: api.ts  types.ts  utils.ts
src/pages/: AioPage.tsx  CanvasPage.tsx  DashboardPage.tsx  LightingPage.tsx  PeripheralsPage.tsx  SetupPage.tsx  WelcomePage.tsx
(+10 files in other folders)
