[package]
name = "glowmint"
version = "0.1.0"
description = "Linux iCUE alternative for Corsair hardware"
authors = ["alan"]
edition = "2021"

[lib]
name = "glowmint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "time", "rt-multi-thread", "macros"] }
thiserror = "2"
hidapi = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
openrgb2 = "0.3"
dirs = "6"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
base64 = "0.22"
